istio-teaching/sidecars/outboundTrafficPolicy/sc-productpage-outboundTrafficPolicy-egressProxy-port.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: productpage
spec:
  workloadSelector:
    labels:
      app: productpage
  outboundTrafficPolicy:
    egressProxy:
      host: "details.istio.svc.cluster.local"
      port:
        number: 9080
    mode: ALLOW_ANY
