istio-teaching/sidecars/outboundTrafficPolicy/sc-productpage-outboundTrafficPolicy-mode-ALLOW_ANY.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sleep
spec:
  workloadSelector:
    labels:
      app: sleep
  outboundTrafficPolicy:
    mode: ALLOW_ANY
